--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,7 @@
     .outlined *,
     .material-symbols-rounded *
   ) {
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans", sans-serif !important;
 }
 
 .MuiIcon-root {
