--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,11 @@
     .text-secondary,
     .text-secondary *
   ) {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   font-family: "DM Sans", sans-serif !important;
+}
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 .text-secondary,
 .text-secondary * {
